--- a/Reg.css
+++ b/Reg.css
@@ -5,7 +5,7 @@ html {
 
 body {
     margin: 0px;
-    background: url(img/Trafico.png);
+    background: url(img/fondoregylog.png);
     background-size: cover;
     background-attachment: fixed;
 }
